--- a/releng/org.xtuml.bp.releng.parent/pom.xml
+++ b/releng/org.xtuml.bp.releng.parent/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.xtuml.bp</groupId>
   <artifactId>org.xtuml.bp.releng.parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>5.3.4</version>
   <packaging>pom</packaging>
   <modules>
     <module>../../src/org.xtuml.bp.als.oal</module>
