--- a/src/org.xtuml.bp.ui.canvas.test/pom.xml
+++ b/src/org.xtuml.bp.ui.canvas.test/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.xtuml.bp</groupId>
     <artifactId>org.xtuml.bp.releng.parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>5.3.4</version>
     <relativePath>../../releng/org.xtuml.bp.releng.parent/</relativePath>
   </parent>
   <groupId>org.xtuml.bp</groupId>
