--- a/releng/org.xtuml.bp.releng.parent/pom.xml
+++ b/releng/org.xtuml.bp.releng.parent/pom.xml
@@ -17,6 +17,11 @@
       <layout>p2</layout>
       <url>http://download.eclipse.org/releases/mars/</url>
     </repository>
+    <repository>
+      <id>orbit</id>
+      <layout>p2</layout>
+      <url>file:////home/johannes/xtuml/repo/target/repository</url>
+    </repository>
   </repositories>
 
   <modules>
@@ -86,7 +91,14 @@
         <artifactId>tycho-maven-plugin</artifactId>
         <version>${tycho-version}</version>
         <extensions>true</extensions>
-      </plugin>
+      </plugin>		<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
+					</configuration>
+				</plugin>
     </plugins>
   </build>
   
