job #8495 - Build product and run tests

--- a/src/org.xtuml.bp.als.oal/pom.xml
+++ b/src/org.xtuml.bp.als.oal/pom.xml
@@ -12,4 +12,28 @@
   <artifactId>org.xtuml.bp.als.oal</artifactId>
   <version>5.3.4</version>
   <packaging>eclipse-plugin</packaging>
+
+  <!--build>
+    <plugins>
+      <plugin>
+        <groupId>org.antlr</groupId>
+        <artifactId>antlr4-maven-plugin</artifactId>
+        <version>4.3</version>
+        <executions>
+          <execution>
+            <id>antlr</id>
+            <goals>
+              <goal>antlr4</goal>
+            </goals>
+          </execution>
+        </executions>
+	<configuration>
+	  <includes>
+	    <include>**/*.bnf</include>
+	  </includes>
+	  <sourceDirectory>${basedir}/bnf</sourceDirectory>
+	</configuration>
+      </plugin>
+    </plugins>
+  </build-->
 </project>
