--- a/src/org.xtuml.bp.io.mdl.test/build.properties
+++ b/src/org.xtuml.bp.io.mdl.test/build.properties
@@ -1,5 +1,4 @@
-bin.includes = plugin.xml,\
-               *.jar,\
+bin.includes = *.jar,\
                mdltest.jar,\
                META-INF/
 source.mdltest.jar = src/
