--- a/src/org.xtuml.bp.ui.explorer.test/build.properties
+++ b/src/org.xtuml.bp.ui.explorer.test/build.properties
@@ -1,5 +1,4 @@
 source.test.jar = src/
-bin.includes = plugin.xml,\
-               *.jar,\
+bin.includes = *.jar,\
                test.jar,\
                META-INF/
