--- a/src/org.xtuml.bp.ui.properties.test/build.properties
+++ b/src/org.xtuml.bp.ui.properties.test/build.properties
@@ -1,5 +1,4 @@
 source.propertiestest.jar = src/
-bin.includes = plugin.xml,\
-               *.jar,\
+bin.includes = *.jar,\
                propertiestest.jar,\
                META-INF/
