--- a/releng/org.xtuml.bp.releng.parent/pom.xml
+++ b/releng/org.xtuml.bp.releng.parent/pom.xml
@@ -26,23 +26,15 @@
 
   <modules>
     <module>../../src/org.xtuml.bp.als.oal</module>
-    <!--module>../../src/org.xtuml.bp.als.oal.test</module-->
     <module>../../src/org.xtuml.bp.bld.pkg</module>
     <module>../../src/org.xtuml.bp.bld.pkg-feature</module>
     <module>../../src/org.xtuml.bp.cdt</module>
     <module>../../src/org.xtuml.bp.cli</module>
-    <module>../../src/org.xtuml.bp.compare</module>
-    <module>../../src/org.xtuml.bp.core</module>
-    <!--module>../../src/org.xtuml.bp.core.test</module-->
     <module>../../src/org.xtuml.bp.debug.ui</module>
-    <!--module>../../src/org.xtuml.bp.debug.ui.test</module-->
     <module>../../src/org.xtuml.bp.doc</module>
     <module>../../src/org.xtuml.bp.docgen</module>
     <module>../../src/org.xtuml.bp.internal.tools</module>
-    <module>../../src/org.xtuml.bp.io.core</module>
     <module>../../src/org.xtuml.bp.io.image</module>
-    <module>../../src/org.xtuml.bp.io.mdl</module>
-    <!--module>../../src/org.xtuml.bp.io.mdl.test</module-->
     <module>../../src/org.xtuml.bp.mc</module>
     <module>../../src/org.xtuml.bp.mc.c.source</module>
     <module>../../src/org.xtuml.bp.mc.cpp.source</module>
@@ -50,39 +42,27 @@
     <module>../../src/org.xtuml.bp.mc.none</module>
     <module>../../src/org.xtuml.bp.mc.systemc.source</module>
     <module>../../src/org.xtuml.bp.mc.template</module>
-    <module>../../src/org.xtuml.bp.model.compare</module>
-    <!--module>../../src/org.xtuml.bp.model.compare.test</module-->
     <module>../../src/org.xtuml.bp.pkg</module>
     <module>../../src/org.xtuml.bp.pkg-feature</module>
     <module>../../src/org.xtuml.bp.search</module>
-    <!--module>../../src/org.xtuml.bp.search.test</module-->
-    <!--module>../../src/org.xtuml.bp.test</module-->
-    <module>../../src/org.xtuml.bp.ui.canvas</module>
-    <!--module>../../src/org.xtuml.bp.ui.canvas.test</module-->
-    <module>../../src/org.xtuml.bp.ui.explorer</module>
-    <!--module>../../src/org.xtuml.bp.ui.explorer.test</module-->
     <module>../../src/org.xtuml.bp.ui.graphics</module>
-    <module>../../src/org.xtuml.bp.ui.properties</module>
-    <!--module>../../src/org.xtuml.bp.ui.properties.test</module-->
     <module>../../src/org.xtuml.bp.ui.search</module>
     <module>../../src/org.xtuml.bp.ui.sem</module>
-    <module>../../src/org.xtuml.bp.ui.session</module>
-    <module>../../src/org.xtuml.bp.ui.text</module>
-    <!--module>../../src/org.xtuml.bp.ui.text.test</module-->
     <!--module>../../src/org.xtuml.bp.ui.xtext.masl</module-->
     <!--module>../../src/org.xtuml.bp.ui.xtext.masl.ide</module-->
     <!--module>../../src/org.xtuml.bp.ui.xtext.masl.tests</module-->
     <!--module>../../src/org.xtuml.bp.ui.xtext.masl.ui</module-->
-    <!--module>../../src/org.xtuml.bp.ui.xtext.masl.ui.tests</module-->
     <module>../../src/org.xtuml.bp.utilities</module>
     <module>../../src/org.xtuml.bp.verifier.pkg</module>
     <module>../../src/org.xtuml.bp.verifier.pkg-feature</module>
     <module>../../src/org.xtuml.bp.welcome</module>
-    <!--module>../../src/org.xtuml.bp.welcome.test</module-->
     <module>../../src/org.xtuml.bp.x2m</module>
     <module>../../src/org.xtuml.help.bp.mc</module>
-    <!--module>../../src/org.xtuml.internal.test</module-->
+    <module>../../src/org.xtuml.bp.test</module>
     <module>../org.xtuml.bp.releng.p2</module>
+    <module>../org.xtuml.bp.releng.parent.generation</module>
+    <module>../org.xtuml.bp.releng.parent.tests</module>
+    <module>../org.xtuml.bp.releng.parent.product</module>
   </modules>
   
   <build>
@@ -101,6 +81,30 @@
         <version>${tycho-version}</version>
         <configuration>
           <compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>target-platform-configuration</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <resolver>p2</resolver>
+          <pomDependencies>consider</pomDependencies>
+          <allowConflictingDependencies>true</allowConflictingDependencies>
+          <includePackedArtifacts>true</includePackedArtifacts>
+          <environments>
+            <environment>
+              <os>linux</os>
+              <ws>gtk</ws>
+              <arch>x86</arch>
+            </environment>
+            <environment>
+              <os>linux</os>
+              <ws>gtk</ws>
+              <arch>x86_64</arch>
+            </environment>
+          </environments>
         </configuration>
       </plugin>
     </plugins>
