--- a/src/org.xtuml.bp.core.test/build.properties
+++ b/src/org.xtuml.bp.core.test/build.properties
@@ -1,5 +1,4 @@
 source.coretest.jar = src/
-bin.includes = plugin.xml,\
-               *.jar,\
+bin.includes = *.jar,\
                coretest.jar,\
                META-INF/
