--- a/src/org.xtuml.bp.test/pom.xml
+++ b/src/org.xtuml.bp.test/pom.xml
@@ -11,5 +11,5 @@
   <groupId>org.xtuml.bp</groupId>
   <artifactId>org.xtuml.bp.test</artifactId>
   <version>5.3.4</version>
-  <packaging>eclipse-test-plugin</packaging>
+  <packaging>eclipse-plugin</packaging>
 </project>
