--- a/src/org.xtuml.bp.ui.explorer.test/pom.xml
+++ b/src/org.xtuml.bp.ui.explorer.test/pom.xml
@@ -4,12 +4,30 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xtuml.bp</groupId>
-    <artifactId>org.xtuml.bp.releng.parent</artifactId>
+    <artifactId>org.xtuml.bp.releng.parent.tests</artifactId>
     <version>5.3.4</version>
-    <relativePath>../../releng/org.xtuml.bp.releng.parent/</relativePath>
+    <relativePath>../../releng/org.xtuml.bp.releng.parent.tests/</relativePath>
   </parent>
   <groupId>org.xtuml.bp</groupId>
   <artifactId>org.xtuml.bp.ui.explorer.test</artifactId>
   <version>1.0.0</version>
   <packaging>eclipse-test-plugin</packaging>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<testSuite>org.xtuml.bp.ui.explorer.test</testSuite>
+					<testClass>org.xtuml.bp.ui.explorer.test.ExplorerGlobalsTestSuite</testClass>
+					<argLine>-Xmx1024m -Xms512m -Dorg.eclipse.epp.logging.aeri.ui.skipReports=true -DWORKSPACE_PATH=${basedir} -DLOGFILE_PATH=${project.build.directory}/bp_tests/ui_explorer/.metadata/.log -Dfile.encoding=UTF-8</argLine>
+					<explodedBundles>
+						<explodedBundle>org.xtuml.bp.pkg</explodedBundle>
+					</explodedBundles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
