--- a/releng/org.xtuml.bp.releng.parent/pom.xml
+++ b/releng/org.xtuml.bp.releng.parent/pom.xml
@@ -18,9 +18,19 @@
       <url>http://download.eclipse.org/releases/mars/</url>
     </repository>
     <repository>
+      <id>mars-update</id>
+      <layout>p2</layout>
+      <url>http://download.eclipse.org/eclipse/updates/4.5/</url>
+    </repository>
+    <repository>
       <id>orbit</id>
       <layout>p2</layout>
       <url>file:////home/johannes/xtuml/repo/target/repository</url>
+    </repository>
+    <repository>
+      <id>cdt</id>
+      <layout>p2</layout>
+      <url>http://download.eclipse.org/tools/cdt/releases/8.8.1</url>
     </repository>
   </repositories>
 
@@ -63,6 +73,9 @@
     <module>../org.xtuml.bp.releng.parent.generation</module>
     <module>../org.xtuml.bp.releng.parent.tests</module>
     <module>../org.xtuml.bp.releng.parent.product</module>
+    <module>../../../packaging/features/org.xtuml.bp.jre.parent</module>
+
+
   </modules>
   
   <build>
@@ -100,9 +113,9 @@
               <arch>x86</arch>
             </environment>
             <environment>
-              <os>linux</os>
-              <ws>gtk</ws>
-              <arch>x86_64</arch>
+              <os>win32</os>
+              <ws>win32</ws>
+              <arch>x86</arch>
             </environment>
           </environments>
         </configuration>
