--- a/releng/org.xtuml.bp.releng.parent/pom.xml
+++ b/releng/org.xtuml.bp.releng.parent/pom.xml
@@ -35,6 +35,7 @@
   </repositories>
 
   <modules>
+    <module>../../src/org.xtuml.bp.als</module>
     <module>../../src/org.xtuml.bp.als.oal</module>
     <module>../../src/org.xtuml.bp.bld.pkg</module>
     <module>../../src/org.xtuml.bp.bld.pkg-feature</module>
@@ -89,7 +90,7 @@
         <artifactId>tycho-compiler-plugin</artifactId>
         <version>${tycho-version}</version>
         <configuration>
-          <compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
+          <compilerArgument>-warn:+discouraged,forbidden -source 1.8</compilerArgument>
         </configuration>
       </plugin>
       
@@ -99,7 +100,7 @@
         <version>${tycho-version}</version>
         <configuration>
           <resolver>p2</resolver>
-          <pomDependencies>consider</pomDependencies>
+          <!--pomDependencies>consider</pomDependencies-->
           <allowConflictingDependencies>true</allowConflictingDependencies>
           <includePackedArtifacts>true</includePackedArtifacts>
           <environments>
