job #8495 - Change Source compliance to 1.8

--- a/releng/org.xtuml.bp.releng.parent/pom.xml
+++ b/releng/org.xtuml.bp.releng.parent/pom.xml
@@ -90,7 +90,7 @@
         <artifactId>tycho-compiler-plugin</artifactId>
         <version>${tycho-version}</version>
         <configuration>
-          <compilerArgument>-warn:+discouraged,forbidden -source 1.8</compilerArgument>
+          <compilerArgument>-warn:none</compilerArgument>
         </configuration>
       </plugin>
       
