--- a/src/org.xtuml.bp.model.compare.test/pom.xml
+++ b/src/org.xtuml.bp.model.compare.test/pom.xml
@@ -13,4 +13,47 @@
   <version>1.0.0-SNAPSHOT</version>
   <!--packaging>eclipse-test-plugin</packaging-->
   <packaging>eclipse-plugin</packaging>
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+
+					<execution>
+						<id>generate-ant</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<property name="compile_classpath" refid="maven.compile.classpath" />
+								<property name="runtime_classpath" refid="maven.runtime.classpath" />
+								<property name="test_classpath" refid="maven.test.classpath" />
+								<property name="plugin_classpath" refid="maven.plugin.classpath" />
+
+								<property name="outputDir" value="${project.build.outputDirectory}" />
+								<property name="sourceDir" value="${project.build.sourceDirectory}" />
+								<property name="ant.home"
+									value="/home/johannes/xtuml/BridgePoint/eclipse/plugins/org.apache.ant_1.9.4.v201504302020" />
+
+								<ant antfile="${basedir}/generate.xml" target="all" />
+							</tasks>
+						</configuration>
+					</execution>
+				</executions>
+
+				<!--dependencies>
+					<dependency>
+						<groupId>org.apache.ant</groupId>
+						<artifactId>ant-antlr</artifactId>
+						<version>1.9.2</version>
+					</dependency>
+				</dependencies-->
+			</plugin>
+		</plugins>
+	</build>
 </project>
