--- a/releng/org.xtuml.bp.releng.parent.tests/pom.xml
+++ b/releng/org.xtuml.bp.releng.parent.tests/pom.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-    <groupId>org.xtuml.bp</groupId>
-    <artifactId>org.xtuml.bp.releng.parent</artifactId>
-    <version>5.3.4</version>
-    <relativePath>../org.xtuml.bp.releng.parent/</relativePath>
-  </parent>
-  
-  <groupId>org.xtuml.bp</groupId>
-  <artifactId>org.xtuml.bp.releng.parent.tests</artifactId>
-  <version>5.3.4</version>
-  <packaging>pom</packaging>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
 
-  <modules>
-    <module>../../src/org.xtuml.bp.als.oal.test</module>
-    <module>../../src/org.xtuml.bp.core.test</module>
-    <module>../../src/org.xtuml.bp.debug.ui.test</module>
-    <module>../../src/org.xtuml.bp.io.mdl.test</module>
-    <module>../../src/org.xtuml.bp.model.compare.test</module>
-    <module>../../src/org.xtuml.bp.search.test</module>
-    <module>../../src/org.xtuml.bp.ui.canvas.test</module>
-    <module>../../src/org.xtuml.bp.ui.explorer.test</module>
-    <module>../../src/org.xtuml.bp.ui.properties.test</module>
-    <!--module>../../src/org.xtuml.bp.ui.xtext.masl.ui.tests</module-->
-    <module>../../src/org.xtuml.bp.welcome.test</module>
-    <module>../../src/org.xtuml.internal.test</module>
-  </modules>
-  
-  
+	<parent>
+		<groupId>org.xtuml.bp</groupId>
+		<artifactId>org.xtuml.bp.releng.parent</artifactId>
+		<version>5.3.4</version>
+		<relativePath>../org.xtuml.bp.releng.parent/</relativePath>
+	</parent>
+
+	<groupId>org.xtuml.bp</groupId>
+	<artifactId>org.xtuml.bp.releng.parent.tests</artifactId>
+	<version>5.3.4</version>
+	<packaging>pom</packaging>
+
+	<modules>
+		<module>../../src/org.xtuml.bp.als.oal.test</module>
+		<module>../../src/org.xtuml.bp.core.test</module>
+		<module>../../src/org.xtuml.bp.debug.ui.test</module>
+		<module>../../src/org.xtuml.bp.io.mdl.test</module>
+		<module>../../src/org.xtuml.bp.model.compare.test</module>
+		<module>../../src/org.xtuml.bp.search.test</module>
+		<module>../../src/org.xtuml.bp.ui.canvas.test</module>
+		<module>../../src/org.xtuml.bp.ui.explorer.test</module>
+		<module>../../src/org.xtuml.bp.ui.properties.test</module>
+		<module>../../src/org.xtuml.bp.ui.xtext.masl.ui.tests</module>
+		<module>../../src/org.xtuml.bp.welcome.test</module>
+		<module>../../src/org.xtuml.internal.test</module>
+	</modules>
+
+
 	<build>
 		<plugins>
 			<plugin>
@@ -99,5 +100,5 @@
 			</plugin>
 		</plugins>
 	</build>
-  
+
 </project>
