--- a/src/org.xtuml.bp.core/pom.xml
+++ b/src/org.xtuml.bp.core/pom.xml
@@ -1,70 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.xtuml.bp</groupId>
-    <artifactId>org.xtuml.bp.releng.parent.generation</artifactId>
-    <version>5.3.4</version>
-    <relativePath>../../releng/org.xtuml.bp.releng.parent.generation/</relativePath>
-  </parent>
-  <groupId>org.xtuml.bp</groupId>
-  <artifactId>org.xtuml.bp.core</artifactId>
-  <version>5.3.4</version>
-  <packaging>eclipse-plugin</packaging>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.xtuml.bp</groupId>
+		<artifactId>org.xtuml.bp.releng.parent.generation</artifactId>
+		<version>5.3.4</version>
+		<relativePath>../../releng/org.xtuml.bp.releng.parent.generation/</relativePath>
+	</parent>
+	<groupId>org.xtuml.bp</groupId>
+	<artifactId>org.xtuml.bp.core</artifactId>
+	<version>5.3.4</version>
+	<packaging>eclipse-plugin</packaging>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.8</version>
-        <executions>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
 
-          <execution>
-            <id>clean-ant</id>
-            <phase>clean</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <tasks>
-                <property name="compile_classpath" 
-                          refid="maven.compile.classpath"/>
-                <property name="outputDir"
-                          value="${project.build.outputDirectory}"/>
-                <property name="sourceDir"
-                          value="${project.build.sourceDirectory}"/>
-                <property name="ant.home"
-                          value="/home/johannes/xtuml/BridgePoint/eclipse/plugins/org.apache.ant_1.9.4.v201504302020"/>
-                <ant antfile="${basedir}/generate.xml"
-                     target="clean_all"/>
-              </tasks>
-            </configuration>
-          </execution>
+					<execution>
+						<id>generate-ant</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<property name="compile_classpath" refid="maven.compile.classpath" />
+								<property name="runtime_classpath" refid="maven.runtime.classpath" />
+								<property name="test_classpath" refid="maven.test.classpath" />
+								<property name="plugin_classpath" refid="maven.plugin.classpath" />
 
-          <execution>
-            <id>generate-ant</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <tasks>
-                <property name="compile_classpath" 
-                          refid="maven.compile.classpath"/>
-                <property name="outputDir"
-                          value="${project.build.outputDirectory}"/>
-                <property name="sourceDir"
-                          value="${project.build.sourceDirectory}"/>
-                <property name="ant.home"
-                          value="/home/johannes/xtuml/BridgePoint/eclipse/plugins/org.apache.ant_1.9.4.v201504302020"/>
-                <ant antfile="${basedir}/generate.xml"
-                     target="nb_all"/>
-              </tasks>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+								<property name="outputDir" value="${project.build.outputDirectory}" />
+								<property name="sourceDir" value="${project.build.sourceDirectory}" />
+								<property name="ant.home"
+									value="/home/johannes/xtuml/BridgePoint/eclipse/plugins/org.apache.ant_1.9.4.v201504302020" />
+
+								<ant antfile="${basedir}/generate.xml" target="nb_all" />
+							</tasks>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
