--- a/src/org.xtuml.bp.model.compare.test/pom.xml
+++ b/src/org.xtuml.bp.model.compare.test/pom.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.xtuml.bp</groupId>
-    <artifactId>org.xtuml.bp.releng.parent.tests</artifactId>
-    <version>5.3.4</version>
-    <relativePath>../../releng/org.xtuml.bp.releng.parent.tests/</relativePath>
-  </parent>
-  <groupId>org.xtuml.bp</groupId>
-  <artifactId>org.xtuml.bp.model.compare.test</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <!--packaging>eclipse-test-plugin</packaging-->
-  <packaging>eclipse-plugin</packaging>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.xtuml.bp</groupId>
+		<artifactId>org.xtuml.bp.releng.parent.tests</artifactId>
+		<version>5.3.4</version>
+		<relativePath>../../releng/org.xtuml.bp.releng.parent.tests/</relativePath>
+	</parent>
+	<groupId>org.xtuml.bp</groupId>
+	<artifactId>org.xtuml.bp.model.compare.test</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<!-- TODO packaging must be test-plug for test execution -->
+	<!--packaging>eclipse-test-plugin</packaging -->
+	<packaging>eclipse-plugin</packaging>
 
 
 	<build>
@@ -40,20 +42,30 @@
 								<property name="ant.home"
 									value="/home/johannes/xtuml/BridgePoint/eclipse/plugins/org.apache.ant_1.9.4.v201504302020" />
 
-								<ant antfile="${basedir}/generate.xml" target="all" />
+								<ant antfile="${basedir}/generate.xml" target="nb_all" />
 							</tasks>
 						</configuration>
 					</execution>
 				</executions>
-
-				<!--dependencies>
-					<dependency>
-						<groupId>org.apache.ant</groupId>
-						<artifactId>ant-antlr</artifactId>
-						<version>1.9.2</version>
-					</dependency>
-				</dependencies-->
 			</plugin>
+			<!-- TODO adjust this accordingly -->
+			<!-- plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<testSuite>org.xtuml.bp.ui.explorer.test</testSuite>
+					<testClass>org.xtuml.bp.ui.explorer.test.ExplorerGlobalsTestSuite</testClass>
+					<argLine>-Xmx1024m -Xms512m
+						-Dorg.eclipse.epp.logging.aeri.ui.skipReports=true
+						-DWORKSPACE_PATH=${basedir}
+						-DLOGFILE_PATH=${project.build.directory}/bp_tests/ui_explorer/.metadata/.log
+						-Dfile.encoding=UTF-8</argLine>
+					<explodedBundles>
+						<explodedBundle>org.xtuml.bp.pkg</explodedBundle>
+					</explodedBundles>
+				</configuration>
+			</plugin-->
 		</plugins>
 	</build>
 </project>
