--- a/src/org.xtuml.bp.ui.explorer.test/pom.xml
+++ b/src/org.xtuml.bp.ui.explorer.test/pom.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.xtuml.bp</groupId>
-    <artifactId>org.xtuml.bp.releng.parent.tests</artifactId>
-    <version>5.3.4</version>
-    <relativePath>../../releng/org.xtuml.bp.releng.parent.tests/</relativePath>
-  </parent>
-  <groupId>org.xtuml.bp</groupId>
-  <artifactId>org.xtuml.bp.ui.explorer.test</artifactId>
-  <version>1.0.0</version>
-  <packaging>eclipse-test-plugin</packaging>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.xtuml.bp</groupId>
+		<artifactId>org.xtuml.bp.releng.parent.tests</artifactId>
+		<version>5.3.4</version>
+		<relativePath>../../releng/org.xtuml.bp.releng.parent.tests/</relativePath>
+	</parent>
+	<groupId>org.xtuml.bp</groupId>
+	<artifactId>org.xtuml.bp.ui.explorer.test</artifactId>
+	<version>1.0.0</version>
+	<packaging>eclipse-test-plugin</packaging>
 
 	<build>
 		<plugins>
@@ -22,7 +23,11 @@
 				<configuration>
 					<testSuite>org.xtuml.bp.ui.explorer.test</testSuite>
 					<testClass>org.xtuml.bp.ui.explorer.test.ExplorerGlobalsTestSuite</testClass>
-					<argLine>-Xmx1024m -Xms512m -Dorg.eclipse.epp.logging.aeri.ui.skipReports=true -DWORKSPACE_PATH=${basedir} -DLOGFILE_PATH=${project.build.directory}/bp_tests/ui_explorer/.metadata/.log -Dfile.encoding=UTF-8</argLine>
+					<argLine>-Xmx1024m -Xms512m
+						-Dorg.eclipse.epp.logging.aeri.ui.skipReports=true
+						-DWORKSPACE_PATH=${basedir}
+						-DLOGFILE_PATH=${project.build.directory}/bp_tests/ui_explorer/.metadata/.log
+						-Dfile.encoding=UTF-8</argLine>
 					<explodedBundles>
 						<explodedBundle>org.xtuml.bp.pkg</explodedBundle>
 					</explodedBundles>
