--- a/src/org.xtuml.bp.model.compare.test/pom.xml
+++ b/src/org.xtuml.bp.model.compare.test/pom.xml
@@ -39,8 +39,7 @@
 
 								<property name="outputDir" value="${project.build.outputDirectory}" />
 								<property name="sourceDir" value="${project.build.sourceDirectory}" />
-								<property name="ant.home"
-									value="/home/johannes/xtuml/BridgePoint/eclipse/plugins/org.apache.ant_1.9.4.v201504302020" />
+								<property name="ant.home" value="${ant-home-path}" />
 
 								<ant antfile="${basedir}/generate.xml" target="all" />
 							</tasks>
