--- a/src/org.xtuml.bp.ui.explorer/pom.xml
+++ b/src/org.xtuml.bp.ui.explorer/pom.xml
@@ -20,25 +20,6 @@
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.8</version>
 				<executions>
-
-					<execution>
-						<id>clean-ant</id>
-						<phase>clean</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<tasks>
-								<property name="compile_classpath" refid="maven.compile.classpath" />
-								<property name="outputDir" value="${project.build.outputDirectory}" />
-								<property name="sourceDir" value="${project.build.sourceDirectory}" />
-								<property name="ant.home"
-									value="/home/johannes/xtuml/BridgePoint/eclipse/plugins/org.apache.ant_1.9.4.v201504302020" />
-								<ant antfile="${basedir}/generate.xml" target="clean_all" />
-							</tasks>
-						</configuration>
-					</execution>
-
 					<execution>
 						<id>generate-ant</id>
 						<phase>generate-sources</phase>
@@ -50,8 +31,7 @@
 								<property name="compile_classpath" refid="maven.compile.classpath" />
 								<property name="outputDir" value="${project.build.outputDirectory}" />
 								<property name="sourceDir" value="${project.build.sourceDirectory}" />
-								<property name="ant.home"
-									value="/home/johannes/xtuml/BridgePoint/eclipse/plugins/org.apache.ant_1.9.4.v201504302020" />
+								<property name="ant.home" value="${ant-home-path}" />
 								<ant antfile="${basedir}/generate.xml" target="nb_all" />
 							</tasks>
 						</configuration>
