--- a/releng/org.xtuml.bp.releng.parent.generation/pom.xml
+++ b/releng/org.xtuml.bp.releng.parent.generation/pom.xml
@@ -28,11 +28,7 @@
 		<module>../../src/org.xtuml.bp.ui.session</module>
 		<module>../../src/org.xtuml.bp.ui.text</module>
 
-
-		<module>../../src/org.xtuml.bp.ui.xtext.masl</module>
-		<module>../../src/org.xtuml.bp.ui.xtext.masl.ide</module>
-		<module>../../src/org.xtuml.bp.ui.xtext.masl.tests</module>
-		<module>../../src/org.xtuml.bp.ui.xtext.masl.ui</module>
+		<module>../../src/org.xtuml.bp.xtext.masl.parent</module>
 	</modules>
 
 	<build>
