--- a/src/org.xtuml.bp.core.test/pom.xml
+++ b/src/org.xtuml.bp.core.test/pom.xml
@@ -12,9 +12,7 @@
 	<groupId>org.xtuml.bp</groupId>
 	<artifactId>org.xtuml.bp.core.test</artifactId>
 	<version>1.0.0</version>
-	<!-- TODO packaging must be test-plug for test execution -->
-	<!--packaging>eclipse-test-plugin</packaging -->
-	<packaging>eclipse-plugin</packaging>
+	<packaging>eclipse-test-plugin</packaging>
 
 
 	<build>
@@ -47,20 +45,20 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- TODO adjust this accordingly -->
-			<!-- plugin>
+
+			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
-					<testSuite>org.xtuml.bp.ui.explorer.test</testSuite>
-					<testClass>org.xtuml.bp.ui.explorer.test.ExplorerGlobalsTestSuite</testClass>
-					<argLine>-Xmx1024m -Xms512m -Dorg.eclipse.epp.logging.aeri.ui.skipReports=true -DWORKSPACE_PATH=${basedir} -DLOGFILE_PATH=${project.build.directory}/bp_tests/ui_explorer/.metadata/.log -Dfile.encoding=UTF-8</argLine>
+					<testSuite>org.xtuml.bp.core.test</testSuite>
+					<testClass>CoreGlobalsTestSuiteGenerics</testClass>
+					<argLine>-Xmx1024m -Xms512m -Dorg.eclipse.epp.logging.aeri.ui.skipReports=true -DWORKSPACE_PATH=${basedir} -DLOGFILE_PATH=${project.build.directory}/bp_tests/core/.metadata/.log -Dfile.encoding=UTF-8</argLine>
 					<explodedBundles>
 						<explodedBundle>org.xtuml.bp.pkg</explodedBundle>
 					</explodedBundles>
 				</configuration>
-			</plugin-->
+			</plugin>
 		</plugins>
 	</build>
 </project>
